objects/IS_System_Process__c.object
<CustomObject>
    <description>This defines how a Business Process interacts with a System Application.  Use Cases are linked as child records, which describe how the application is used to support the business process.</description>
    <fields>
        <fullName>Function__c</fullName>
        <inlineHelpText>The part of the process performed by this interaction.  Or a functional grouping of Use Cases.</inlineHelpText>
        <label>Function</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_Are_These_Related__c</fullName>
        <inlineHelpText>Describe how the people in the business process use the related application</inlineHelpText>
        <label>How Are These Related?</label>
        <length>16385</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IS_Business_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IS Business Process</label>
        <referenceTo>IS_Business_Process__c</referenceTo>
        <relationshipLabel>IS System Junctions</relationshipLabel>
        <relationshipName>IS_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IS_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>zzzIS Process</label>
        <referenceTo>IS_Process__c</referenceTo>
        <relationshipLabel>IS System Junctions</relationshipLabel>
        <relationshipName>zzzIS_System_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IS_System_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IS System Application</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>IS_System__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Application</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>IS_System__c</referenceTo>
        <relationshipLabel>IS System Junctions</relationshipLabel>
        <relationshipName>IS_System_Processes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IS_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IS System</label>
        <referenceTo>IS_System__c</referenceTo>
        <relationshipName>IS_System_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <formula>IS_Business_Process__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Process Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SJ_Unique_Number__c</fullName>
        <description>Used to enforce a unique System Junction number, which ensures that no duplicate System Junction records are created</description>
        <label>SJ Unique Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>System_Junction_Number__c</fullName>
        <formula>&apos;SJ-&apos; &amp; RIGHT(IS_System_Application__r.System_Number__c, LEN(IS_System_Application__r.System_Number__c)-3) &amp; &apos;.&apos; &amp; RIGHT(IS_Business_Process__r.Process_Number__c,LEN(IS_Business_Process__r.Process_Number__c)-3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Derived from IS System Number and IS Business Process Number</inlineHelpText>
        <label>System Junction Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Name__c</fullName>
        <formula>IS_System_Application__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Name</label>
        <type>Text</type>
    </fields>
    <label>IS System Junction</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IS System Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>